--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -234,46 +234,48 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>10:30 </strong>
-                                            Выезд с центра Запорожья после минутки позитива. За
-                                            Заберем Вас Фестивальная-Советская-Автовокзал (согласуйте при брони)
+                                        <p><strong>06:00 </strong>
+                                            Выезд из Центра Запорожья после минутки позитива. Едем на МЯГКОМ И УЮТНОМ
+                                            ТРАНСПОРТЕ тур. класса (раскладные сидения), TV TV (ЛЕГКАЯ ДОРОГА). Заберем
+                                            Вас из Металлургов-Фестивальная-Авто и Ж/Д вокзалы.
                                         </p>
-                                        <p><strong>11:30-13:30</strong>
-                                            Мы в Зоопарке Пылышенко, слушаем удивительную
-                                            историю создания Зоопарка и знакомимся с животными:
-                                            милыми мишками, смешными енотиками, величественными
-                                            тиграми и конечно грациозными
-                                            львами! Делаем самые красивые фото на память. Посещаем уютное кафе с
-                                            хот-догами, картошкой фри,
-                                            мороженым и кофе. Кого-же мы увидим: смешных енотиков, быструю носуху,
-                                            красивейших тигров и львов,
-                                            ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
-                                            обезьянок, попугайчиков,
-                                            огромных и добрых мясоедов, сластен мишек и еще много разных животных, ведь
-                                            с каждым днем зоопарк растет
-                                            и развивается! Оставляем денежку от Нас на питание животным и продолжаем
-                                            свой путь.
-                                            <p />
-                                        <p><strong>13:40-14:40 </strong>Посещаем мистический Замок Попова!
-                                            Говорят в замке живет настоящее привидение, может встретим его *посещение по
-                                            желанию, доп.оплата
-                                            (70грн взрослые, 50 грн дети вход, экскурсия по комплексу отдельно +25-35
-                                            грн для групп от количества людей
-                                            в группе )
-                                            <p />
-                                        <p><strong>15:25-17:00 </strong>Панское озеро с волшебным родником.
-                                            Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
-                                            Если будет хорошая погода, обязательно посетим родник и наберем с собой
-                                            вкуснейшей воды!
-                                            Загадаем желание и оно обязательно сбудется.
-                                            <p />
-                                        <p><strong>17:30</strong> ММы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С
-                                            ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ
-                                            И ВЫКЛАДЫВАЕМ ФОТО. Не забывайте отмечать наши странички, +10000 в карму и
-                                            искренняя наша благодарочка (moa)
-                                            *Время указано предварительно и может меняться для улучшения качества отдыха
-                                            туристам, без ущерба экскурсии!
+                                        <p><strong>11:00-13:00</strong>
+                                            Вот уже и Экопарк Фельдмана. Глаза разбегаются от красоты цветущих
+                                            хризантем! Мы в сказке! Вначале сделаем фотосет с ретро авто и сразу на
+                                            экскурсию по экопарку!
+                                            Слушаем, восхищаемся и удивляемся, делаем фото на память )Заходим в птичник
+                                            и здороваемся с разнообразнейшими видами попугайчиков и других ярких птичек.
+                                            Посещаем все зоны и трогаем всех кого можно трогать ). Кушаем в Экопарке там
+                                            множество кафе и фаст-фудов.
                                         </p>
+                                        <p><strong>13:30*-15:30* </strong>
+                                            Экскурсия по Харькову от самого интересного
+                                            местного экскурсовода. Посещение самых незабываемых мест Харькова!
+                                            Парка Шевченко с красивейшими фонтанами, только с аллеей славы!
+                                            В каких только садах мы не бывали! Но вот в саду скульптур будем впервые!
+                                            Удивительные места Харькова! Откроем их вместе!
+                                            А у фонтана влюбленным на площади Архитекторов каждый сделает себе фото на
+                                            память о незабываемом туре.
+                                        </p>
+                                        <p><strong>16:00-18:00 </strong>
+                                            Крутецкий Диснейленд! Счастье, восторг, море
+                                            крутых эмоций и незабываемых аттракционов! Супер круто и весело! В парке
+                                            есть достаточно кафе чтоб покушать, на любой вкус!
+                                        </p>
+                                        <p><strong>23:30*</strong> Мы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С
+                                            ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ И ВЫКЛАДЫВАЕМ ФОТО. Не забывайте отмечать
+                                            наши странички, +10000 в карму и искренняя наша благодарочка (moa)
+
+                                        </p>
+                                        <hr>
+                                        <p>
+                                            <i>
+                                                *Время указано предварительно и может меняться для улучшения качества
+                                                отдыха
+                                                туристам, без ущерба экскурсии!
+                                            </i>
+                                        </p>
+
                                     </div>
                                 </div>
                             </div>
@@ -284,25 +286,18 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                    Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;
-                                    (от количества людей в группе)
+                                    Проезд по всему маршруту на комфортабельном транспорте(18-50 мест в зависимости от
+                                    количества людей в группе, места по датам оплат тура);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    входной билет и экскурсия в Центре Пылышенко,;
+                                    супер позитивное сопровождение по маршруту от представителя Нового поворота;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    супер-позитивное сопровождение представителя Нового поворота;
+                                    очень интересная обзорная экскурсия по Харькову "Новинки Харькова" от местного
+                                    экскурсовода;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    самое замечательное настроение,
-                                    доброе дело которые делаете вы помогая животным!
-                                    БЛАГОТВОРИТЕЛЬНАЯ АКЦИЯ НАКОРМИ ЛЬВА*(все кто едет с нами
-                                    кроме оплаты входного билета в Центр Пылышенко дарят дополнительные средства,
-                                    а именно Новый поворот 50% от поездки*(от прибыли ТА) передаст Центру
-                                    Пылышенко на питание львам)
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота.
+                                    мини-сюрприз (подарок) всем от компании "Новый поворот".
                                 </li>
                             </ul>
                         </div>
@@ -310,24 +305,25 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Входные билеты в Усадьбу Попова (70грн взрослые, 50 грн дети вход,
-                                    экскурсия по комплексу отдельно +25-35 грн для групп от количества
-                                    людей в группе )
+                                    Питание;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                    питание с собой.
+                                    Катание на аттракционах;
                                 </li>
-                                <ul>
+                                <li class="list-group-item list-group-item-danger ">
+                                    Проезд до места выезда группы и обратно.
+                                </li>
+                            </ul>
                         </div>
                         <hr>
                         <p>
                             Тексты подсказок:
                         </p>
-                        <span class="badge rounded-pill bg-secondary text-white"> Зоопарк Пылышенко </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Мистический Замок</span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Замок Попова </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Панское озеро </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Волшебный родник </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Экскурсия из Запорожья </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Потрясающий бал Хризантем</span>
+                        <span class="badge rounded-pill bg-secondary text-white">  Зоопарк Фельдмана </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Диснейленд в Харькове</span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Парк Горького</span>
 
                     </div>
                 </div>
