--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -151,7 +151,9 @@
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
 
-                            <span class="fa fa-info-circle"></span><strong> Информируем</strong><br />
+                            <span class="fa fa-info-circle"></span><strong> Информируем</strong>
+                            <br />
+                            <br />
                             <span class="txt-alg-jf">
                                 Стоимость тура <strong>975 грн.</strong>, детям 6 - 12 лет - <strong>830
                                     грн.</strong>.<br>
