--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -12,8 +12,7 @@
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Харьков | Хризантемы | Диснейленд">
-    <meta property="og:description" content=" Харьков, потрясающий бал хризантем. Мегакрутой экопарк Фельдмана.
-    Суперовый Диснейленд, парк Горького..." />
+    <meta property="og:description" content=" Харьков, потрясающий бал хризантем. Мегакрутой экопарк Фельдмана. Суперовый Диснейленд, парк Горького..." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html" />
     <meta property="og:image"
