--- a/packages.html
+++ b/packages.html
@@ -110,32 +110,7 @@
 
                 <!--
                             ***  Туры  ***
-     -->
-
-                <!-- Сырная ферма и Пасека -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm"
-                                class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
-                        </h5>
-                        <p class="">
-                            Самая вкусная экскурсия
-                        </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Августа</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- //Сырная ферма и Пасека -->
+                -->
 
                 <!--  Аскания Нова Сафари  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -362,6 +337,33 @@
                 </div>
                 <!--  //Фестиваль воздушных шаров -->
 
+                <!-- Харьков, Хризантемы, Диснейленд  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/home-Kharkiv-Chrysanthemums-Disneyland.jpg" alt="baloon-fast"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>975грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                                Харьков, Хризантемы, Диснейленд
+                            </a>
+                        </h5>
+                        <p class="">
+                            Мы посетим сердце Харькова! 
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>02 Октября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Харьков, Хризантемы, Диснейленд -->
+                
                 <!--  Святогорск И Соледар -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
