--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -111,6 +111,31 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 
+                <!-- Сырная ферма и Пасека -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
+                        </h5>
+                        <p class="">
+                            Самая вкусная экскурсия
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Августа</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- //Сырная ферма и Пасека -->
+                
                 <!--  Карпаты -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
