--- a/packages.html
+++ b/packages.html
@@ -350,11 +350,11 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                                Харьков, Хризантемы, Диснейленд
+                                Харьков, Хризантемы
                             </a>
                         </h5>
                         <p class="">
-                            Мы посетим сердце Харькова! 
+                            Посетим сердце Харькова! 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>02 Октября</span></li>
