--- a/packages.html
+++ b/packages.html
@@ -340,7 +340,7 @@
                 <!-- Харьков, Хризантемы, Диснейленд  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
                             <img src="/images/Kharkiv-Chrysanthemums-Disneyland/home-Kharkiv-Chrysanthemums-Disneyland.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
@@ -349,8 +349,8 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                                Харьков, Хризантемы
+                            <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
+                                Харьков, Хризантемы, Диснейленд
                             </a>
                         </h5>
                         <p class="">
