--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -144,7 +144,12 @@
 </head>
 
 <body>
-
+	
+    <!-- Падающие листья -->
+    <script type="text/javascript" src="./scripts/leaves.js"></script>
+    <div id="leafContainer"></div>
+    <!-- //Падающие листья -->
+	
     <!-- header -->
     <header>
         <div class="container">
