--- a/packages.html
+++ b/packages.html
@@ -347,14 +347,14 @@
                         <p><span class="fa fa-tags"></span> <span>975грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
-                                Харьков, Хризантемы, Диснейленд
+                                Харьков
                             </a>
                         </h5>
                         <p class="">
-                            Посетим сердце Харькова! 
+                            Харьков, Хризантемы, Диснейленд
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>02 Октября</span></li>
