--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -41,6 +41,8 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
+	
+	<!-- Падающие листья -->
         <style type="text/css">
 		
 		#leafContainer {
@@ -137,13 +139,13 @@
 			-webkit-transform: scale(-1, 1) rotate(-50deg);
 		    }
 		}
-    </style>
+         </style>
+	<!-- //Падающие листья -->
 </head>
 
 <body>
 	
     <!-- Падающие листья -->
-    
     <div id="leafContainer"></div>
     <!-- //Падающие листья -->
 	
@@ -597,10 +599,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
     <script>
         console.log("Туры выходного дня 'Новый Поворот'");
     </script>
-<script type="text/javascript" src="./scripts/leaves.js"></script>
+
+    <!-- Падающие листья -->
+    <script type="text/javascript" src="./scripts/leaves.js"></script>
+    <!-- //Падающие листья -->
+
     <script>
         window.replainSettings = { id: 'd6700dc7-24e8-42c2-ad8d-fc8f31bc18e8' };
         (function (u) {
