--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -509,13 +509,13 @@
                 </div>
                 <!-- //Фестиваль Воздушных Шаров  -->
 
-                <!-- Сырная ферма и Пасека -->
+               <!-- Харьков, Хризантемы, Диснейленд -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Ферма</h4>
+                    <h4 class="destination mb-3">Харьков </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/Cheese-Farm/pop-cheese-farm.jpg" class="img-fluid"
-                                alt=" Сырная ферма и Пасека ">
+                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
+                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/pop-Kharkiv-Chrysanthemums-Disneyland.jpg" class="img-fluid"
+                                alt="Харьков, Хризантемы, Диснейленд">
                         </a>
                         <div class="rating">
                             <ul>
@@ -529,12 +529,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Ферма и Пасека </h4>
+                            <h4> Харьков  </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Сырная ферма и Пасека -->
+                <!-- //Харьков, Хризантемы, Диснейленд -->
 
                 <!-- Розовое озеро  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
