--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -157,6 +157,12 @@
 				      
 				      <tr>
 					  <th scope="row"></th>
+					  <td>Харьков, Хризантемы, Диснейленд</td>
+					  <td>02 Октября</td>
+				      </tr>
+				      
+				      <tr>
+					  <th scope="row"></th>
 					  <td>Святогорск И Соледар</td>
 					  <td>09 - 10 Октября</td>
 				       </tr>
