--- a/packages.html
+++ b/packages.html
@@ -112,33 +112,6 @@
                             ***  Туры  ***
                 -->
 
-                <!--  Аскания Нова Сафари  -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Askania-Nova-Safari.html">
-                            <img src="images/Askania-Nova-Safari/home-Askania-Nova-Safari.jpg" alt="baloon-fast"
-                                class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>1150грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Askania-Nova-Safari.html">
-                                Аскания Нова Сафари
-                            </a>
-                        </h5>
-                        <p class="">
-                            Животные Аскании ждут гостей...
-                        </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22 Августа </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Аскания Нова Сафари  -->
-
                 <!--  Розовое озеро   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -182,36 +155,12 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 28 Августа</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 29 Августа</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
                 <!--  //Пиво -->
-
-                <!--  Хортица -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
-                            <img src="images/hortica-mini.jpg" alt="Hortica" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>95грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Hortica.html">
-                                Хортица
-                            </a>
-                        </h5>
-                        <p class="">Тайны и загадки родного острова Хортица... </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>05 Сентября </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Хортица  -->
 
                 <!--  Яхтклуб И AQUAZOO  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -239,6 +188,30 @@
                     </div>
                 </div>
                 <!--  //Яхтклуб И AQUAZOO  -->
+                
+                <!--  Хортица -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                            <img src="images/hortica-mini.jpg" alt="Hortica" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>95грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                                Хортица
+                            </a>
+                        </h5>
+                        <p class="">Тайны и загадки родного острова Хортица... </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>05 Сентября </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Хортица  -->
 
                 <!--  Вилково, Устрицы И Шабо -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -481,6 +454,30 @@
                     </div>
                 </div>
                 <!--  //Яворовская Ниагара -->
+                
+                 <!--  Карпаты -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Karpati.html">
+                            <img src="images/karpati-min.jpg" alt="Karpati" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Karpati.html">
+                                Карпаты
+                            </a>
+                        </h5>
+                        <p class=""> Расписание походов в Карпаты на 2021 год </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Карпаты  -->
 
                 <!--  Турция -->
                 <div class="col-lg-3 col-sm-6 mb-5">
