--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -196,36 +196,37 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета ДО <strong>5 августа*: </strong> <u> 2975 грн.</u>, от 7 до 10 лет - <u>2955
-                                    грн.</u>
+                                Цена<strong>: </strong> <u> 2900 грн.</u>при брони от 1 места до 4 сентября
+                            </span> Минимальная предоплата 300грн
+                            <hr>
+                            <span class="txt-alg-jf">
+                                <strong> </strong> <u> 2800 грн.</u>, при брони от 3 мест до 4 сентября
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                Цена билета C <strong>6 - 15 августа*: </strong> <u> 3150 грн.</u>, от 7 до 10 лет -
-                                <u>3120 грн.</u>
+                                <strong></strong> <u> 2700 грн.</u>, при брони от 6 мест до 3 сентября
                             </span>
-                            <hr>
+                                                        <hr>
                             <span class="txt-alg-jf">
-                                Цена билета C <strong>16 - 27 августа*: </strong> <u> 3250 грн.</u>, от 7 до 10 лет -
-                                <u>3220 грн.</u>
+                               <strong></strong> <u> 2550 грн.</u>, при брони от 10 мест до 3 сентября
                             </span>
-                            <hr>
+				                   <hr>
                             <span class="txt-alg-jf">
-                                Цена билета C <strong>28 августа*: </strong> <u> 3350 грн.</u>, от 7 до 10 лет - <u>
-                                    3320 грн.</u>
+				    <strong></strong> <u> 3000 грн.</u>, при брони с 5 сентября
+                            </span>
                                 <span class="font-italic"> (при условии что будут места)</span>
                                 <img src="./images/Emoji/1f609.png" alt="emoji" height="20px">
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                <i>*Предоплата по брони 50% от стоимости.</i>
+                                <i>*Предоплата по брони 50% от стоимости или 300грн фиксация места.</i>
                             </span>
                         </div>
                         <!-- //Alert info -->
 
                         <ul class="listing">
                             <!-- Цена и Дата -->
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 2975 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 2550 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>2 Дня</span></li>
                             <li><span class="fa fa-eye mr-2"></span> Посмотреть:
                                 <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание
