--- a/page-wine.html
+++ b/page-wine.html
@@ -214,22 +214,26 @@
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
                             <li class="list-group-item">
-                                <span class="fa fa-calendar mr-2"></span> 05 Июня 2021
+                                <span class="fa fa-calendar mr-2"></span> 04 Сентября 2021
                             </li>
                             <li class="list-group-item">
-                                <span class="fa fa-calendar mr-2"></span> 12 Июня 2021
+                                <span class="fa fa-calendar mr-2"></span> 11 Сентября 2021
                             </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 19 Июня 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 26 Июня 2021</li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 03 Июля 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 10 Июля 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 17 Июля 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 24 Июля 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 31 Июля 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 07 Августа 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 14 Августа 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 21 Августа 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 28 Августа 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Сентября </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 25 Сентября 2021</li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 02 Октября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 09 Октября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 16 Октября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 23 Октября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 30 Октября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 06 Ноября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 13 Ноября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 20 Ноября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 27 Ноября 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 4 Декабря 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 11 Декабря 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Декабря 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 25 Декабря 2021 </li>
                         </ul>
 
                         <hr>
