--- a/page-wine.html
+++ b/page-wine.html
@@ -219,7 +219,7 @@
                             <li class="list-group-item">
                                 <span class="fa fa-calendar mr-2"></span> 11 Сентября 2021
                             </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Сентября </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Сентября 2021</li>
                             <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 25 Сентября 2021</li>
                             <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 02 Октября 2021 </li>
                             <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 09 Октября 2021 </li>
