--- a/page-Kharkiv-Chrysanthemums-Disneyland.html
+++ b/page-Kharkiv-Chrysanthemums-Disneyland.html
@@ -97,7 +97,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Зоопарк-Замок-Oзеро</li>
+                            <li class="breadcrumb-item active" aria-current="page">Харьков, Хризантемы, Диснейленд</li>
                         </ol>
                     </nav>
                 </div>
