--- a/page-Roses-Farm-Waterfall.html
+++ b/page-Roses-Farm-Waterfall.html
@@ -251,10 +251,9 @@
                                             Такие фермы мы видели лишь в Закарпатском Хусте.
                                             Но эта еще интереснее! Ведь в
                                             этом месте рождаются шедевры сыроварения!<br>
-                                        <p class="text-danger">
+                                        <span class="text-danger">
                                             Мы попробуем 7 сыров:
-                                        </p>
-                                        <p>
+                                        </span><br>
                                             - Свитанок и Адыгейский (коз);<br>
                                             - Шевер козий (творожный сыр в травах);<br>
                                             - Качота с пажитником(ореховое наслаждение);<br>
