--- a/page-Roses-Farm-Waterfall.html
+++ b/page-Roses-Farm-Waterfall.html
@@ -113,7 +113,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>2 октября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>4 сентября</span>
                                 </li>
                             </ul>
                         </div>
@@ -171,10 +171,15 @@
                                 взрослых).
                             </span>
                         </div>
+			<!-- //Alert info --> 
+			    
+			<!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>975 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>495 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                         </ul>
+			<!-- //Стоимость, Продолжительность -->   
+			    
                         <br>
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
