--- a/page-Roses-Farm-Waterfall.html
+++ b/page-Roses-Farm-Waterfall.html
@@ -13,7 +13,7 @@
     <!-- Open Graph data-->
     <meta property="og:title" content="Розы, Ферма, Водопад">
     <meta property="og:description"
-        content="Миллион аллых роз, розовое поле, водопад на мокрой московке, Натальевсуий карьер - купание, сырная ферма - дегустация 7 видов сыра, молока и йогурта!" />
+        content="Миллион аллых роз, розовое поле, водопад на мокрой московке, Натальевский карьер - купание, сырная ферма - дегустация 7 видов сыра, молока и йогурта!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Roses-Farm-Waterfall.html" />
     <meta property="og:image" content="./images/Roses-Farm-Waterfall/pop-Roses-Farm-Waterfall.jpg">
