--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -118,7 +118,7 @@
                             <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
+                       <!-- <p><span class="fa fa-tags"></span> <span>400грн.</span></p>-->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -129,7 +129,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Августа</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -143,7 +143,7 @@
                             <img src="images/Askania-Nova-Safari/home-Askania-Nova-Safari.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>1150грн.</span></p>
+                      <!--  <p><span class="fa fa-tags"></span> <span>1150грн.</span></p>  -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
@@ -156,7 +156,7 @@
                             Животные Аскании ждут гостей...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22 Августа </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
