--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -124,8 +124,8 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 22
-                                        Августа </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> Под
+                                        Заказ </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
