--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -149,7 +149,7 @@
 
                         <hr>
                         <!-- Alert info -->
-                        <div class="alert alert-info mt-3 ">
+                   <!-- <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">×</button>
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br><br>
@@ -158,11 +158,12 @@
                                 взрослых.
                             </span>
                         </div>
+		    -->
                         <!-- // Alert info -->
 
                         <ul class="listing">
                             <!-- Цена и Дата -->
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 1150 Грн.</span></li>
+                    <!--    <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 1150 Грн.</span></li>    -->
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <!-- //Цена и Дата -->
                         </ul>
