--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -91,7 +91,6 @@
     </section>
     <!-- //banner -->
 
-
     <!--single page-->
     <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
@@ -124,7 +123,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>15 Августа</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -180,7 +179,7 @@
                         <hr>
 
                         <!-- Alert info -->
-                        <div class="alert alert-info mt-3 ">
+                   <!-- <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong>
@@ -196,12 +195,13 @@
                                 С <strong>02 августа: </strong><u>400 грн.</u> - взрослые, <u>390 грн.</u> - дети.
                             </span>
                         </div>
+		    -->
                         <!-- //Alert info -->
 
 
                         <ul class="listing">
                             <!-- Цена и Дата -->
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 400 Грн.</span></li>
+                     <!--   <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 400 Грн.</span></li>     -->
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <!-- //Цена и Дата -->
                         </ul>
