--- a/packages.html
+++ b/packages.html
@@ -153,7 +153,7 @@
                                 Розы, Ферма, Водопад
                             </a>
                         </h5>
-                        <p class="">Только 1 тур на Розовое поле </p>
+                        <p class="">Тур на Розовое поле </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 4 Сентября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
