--- a/index.html
+++ b/index.html
@@ -327,82 +327,82 @@
                 </div>
                 <!--  //Вилково, Устрицы И Шабо  -->
 
-                <!-- Сырная ферма и Пасека -->
+                <!--  Яхтклуб И AQUAZOO  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm"
+                        <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
+                            <img src="images/Yacht-club-and-Aquazoo/home-Yacht-club-and-Aquazoo.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>520грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
+                            <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
+                                Яхтклуб И AQUAZOO
+                            </a>
                         </h5>
                         <p class="">
-                            Самая вкусная экскурсия
+                            Трогательный зоопарк и яхтклуб...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Августа</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 05 Сентября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!-- //Сырная ферма и Пасека -->
+                <!--  //Яхтклуб И AQUAZOO  -->
 
-                <!--  Розовое озеро   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                            <img src="images/Pink-Lake-head.jpg" alt="Розовое озеро" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                                Розовое озеро
-                            </a>
-                        </h5>
-                        <p class="">Дегустация вин на розовом озере </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Розовое озеро -->
-
-                <!--  Львята и лошадки  -->
+                <!-- Харьков, Хризантемы, Диснейленд  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
-                            <img src="images/Lions-and-Horses/home-lions-and-horses.jpg" alt="baloon-fast"
+                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
+                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/home-Kharkiv-Chrysanthemums-Disneyland.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>350грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>975грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
-                                Львята и лошадки
+                            <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
+                                Харьков
                             </a>
                         </h5>
                         <p class="">
-                            Экскурсия львы и лошади...
+                            Харьков, Хризантемы, Диснейленд
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>02 Октября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Львята и лошадки -->
+                <!--  //Харьков, Хризантемы, Диснейленд -->
 
+                <!--  Зоопарк Пылышенко -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
+                        </h5>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Зоопарк Пылышенко -->
+                
             </div>
             <div class="view-package text-center mt-4">
                 <a href="packages.html">Просмотреть все туры</a>
