--- a/page-Roses-Farm-Waterfall.html
+++ b/page-Roses-Farm-Waterfall.html
@@ -118,7 +118,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Миллион аллых роз, розовое поле, водопад на мокрой московке, Натальевский карьер - купание,
+                            Миллион алых роз, розовое поле, водопад на мокрой московке, Натальевский карьер - купание,
                             сырная ферма - дегустация 7 видов сыра, молока и йогурта!
                         </h4>
                         <p class="mb-3 bg-danger text-white text-center">
