--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
           "name": "Туры выходного дня - Новый Поворот",
           "url": "https://novipovorot.pp.ua",
           "description": "Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации",
-          "image": "https://dmitriy-1986.github.io/Travell-tours-site/images/novi-povorot.jpg"
+          "image": "https://novipovorot.pp.ua/images/novi-povorot.jpg"
         }
     </script>
     <!-- /Schema.org -->
