--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -102,7 +102,11 @@
                     <h3 class="title">Межигорье, Умань - жемчуг любви </h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="/images/Baloon-fast/balloon-fastival-max.jpg" alt="news image" class="img-fluid">
+                    
+                    <!-- Картинка -->
+                <!--   <img src="/images/Baloon-fast/balloon-fastival-max.jpg" alt="news image" class="img-fluid">   -->
+                    <!-- //Картинка -->
+                    
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
