--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -415,13 +415,10 @@
                         <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье-Каменец Подольсикий </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Фестиваль воздушных шаров из Запорожье
-                        </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Бакота из Запорожья </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Новая Софиевка Умань </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Замок в Каменец Подольском </span>
-                        <!-- <div id="liqpay_checkout"></div>-->
+                        <span class="badge rounded-pill bg-secondary text-white"> Межигорье </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Умань </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Жемчуг Любви </span>
+                    
                     </div>
                 </div>
             </div>
